--- a/tesla.html
+++ b/tesla.html
@@ -3,11 +3,28 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="css/exercice.css">
+	<link rel="stylesheet" type="text/css" href="css/tesla.css">
+	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
 	<script src="https://kit.fontawesome.com/b368ec75de.js" crossorigin="anonymous"></script>
+	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 	<title>exercice1</title>
 </head>
 <body>
+
+	<!--- Front page test --->
+
+	<div class="banner-area">
+		<div class="content-area">
+			<div class="content">
+
+				<h1>Simone</h1>
+				<p>Un silence pure et éléctrique</p>
+				<button class="btn">Clique</button>
+
+			</div>
+		</div>
+	</div>
+
 	<header>
 		<h1>Simone</h1>
 		<button type="button"><i class="fa-solid fa-user"></i>Connecter</button>	
@@ -35,6 +52,7 @@
 		<li>
 			<button onclick="menu_charge()">
 				<i aria_label="menu_charge" class="fa-solid fa-bolt"></i>
+			</button>
 		</li>
 		<li>
 			<button onclick="menu_cars()">
