--- a/tesla.html
+++ b/tesla.html
@@ -11,6 +11,25 @@
 </head>
 <body>
 
+	<!--- Navbar --->
+
+	<nav class="sidebar">
+		<header>
+			<div class="image-text">
+				<span class="image">
+					<img src="img/logo_tesla.png" alt="logo tesla">
+				</span>
+
+				<div class="text header-text">
+					<span class="name">Tesla</span>
+					<span class="profession">Simone</span>
+				</div>
+
+				<i class='bx bx-chevron-right toggle'></i>
+			</div>
+		</header>
+	</nav>
+
 	<!--- Front page test --->
 
 	<div class="banner-area">
@@ -24,6 +43,7 @@
 			</div>
 		</div>
 	</div>
+
 
 	<header>
 		<h1>Simone</h1>
