--- a/tesla.html
+++ b/tesla.html
@@ -13,7 +13,7 @@
 
 	<!--- Navbar --->
 
-	<nav class="sidebar">
+	<nav class="sidebar close">
 		<header>
 			<div class="image-text">
 				<span class="image">
@@ -28,6 +28,67 @@
 				<i class='bx bx-chevron-right toggle'></i>
 			</div>
 		</header>
+
+		<div class="menu-bar">
+			<menu>
+				<li class="search-box">
+					<i class='bx bx-search icon'></i>
+					<input type="search" placeholder="Recherche...">
+				</li>
+				<ul class="menu-links">
+					<li class="nav-link">
+						<a href="#">
+							<i class='bx bxs-car-mechanic icon' ></i>
+							<span class="text nav-text">Contrôles</span>
+						</a>
+					</li>
+
+					<li class="nav-link">
+						<a href="#">
+							<i class='bx bx-wind icon'></i>
+							<span class="text nav-text">Ventilation</span>
+						</a>
+					</li>
+
+					<li class="nav-link">
+						<a href="#">
+							<i class='bx bx-plug icon' ></i>
+							<span class="text nav-text">Charge</span>
+						</a>
+					</li>
+
+					<li class="nav-link">
+						<a href="#">
+							<i class='bx bxs-car-crash icon'></i>
+							<span class="text nav-text">Technique</span>
+						</a>
+					</li>
+
+				</ul>
+			</menu>
+
+			<div class="bottom-content">
+				<li class="">
+					<a href="#">
+						<i class='bx bx-log-out icon'></i>
+						<span class="text nav-text">Déconnexion</span>
+					</a>
+				</li>
+
+				<li class="mode">
+					<div class="moon-sun">
+						<i class='bx bx-moon icon moon'></i>
+						<i class='bx bx-sun icon sun'></i>
+					</div>
+					<span class="mode-text text">Mode sombre</span>
+
+					<div class="toggle-switch">
+						<span class="switch"></span>
+					</div>
+				</li>
+			</div>
+
+		</div>
 	</nav>
 
 	<!--- Front page test --->
@@ -58,29 +119,6 @@
 
 	<img src="https://www.pngmart.com/files/21/White-Tesla-Car-PNG-Clipart.png" alt="tesla car">
 
-	<menu>
-		<li>
-			<button onclick="menu_main()">
-				<i aria-label="menu_main" class="fa-solid fa-circle-xmark"></i>
-			</button>
-		</li>	
-		<li>
-			<button onclick="menu_fan()">
-				<i aria-label="menu_fan" class="fa-solid fa-fan"></i>
-			</button>
-		</li>
-		<li>
-			<button onclick="menu_charge()">
-				<i aria_label="menu_charge" class="fa-solid fa-bolt"></i>
-			</button>
-		</li>
-		<li>
-			<button onclick="menu_cars()">
-				<i aria-label="menu_cars" class="fa-solid fa-car-side"></i>
-			</button>
-		</li>
-	</menu>
-
 	<nav>
 		<ul>
 			<li><i class="fa-solid fa-car"></i>Contrôles</li>
@@ -90,6 +128,8 @@
 			<li><i class="fa-solid fa-shield"></i>Sécurité et conducteurs<br><em>IMoi - Connectée</em></li>
 		</ul>
 	</nav>
+
+	<script src="js/script.js"></script>
 
 </body>
 </html>
