--- a/tesla.html
+++ b/tesla.html
@@ -29,7 +29,7 @@
 			</div>
 		</header>
 
-		<div class="menu-bar">
+		<section class="menu-bar">
 			<menu>
 				<li class="search-box">
 					<i class='bx bx-search icon'></i>
@@ -88,7 +88,7 @@
 				</li>
 			</div>
 
-		</div>
+		</section>
 	</nav>
 
 	<!--- Front page test --->
