--- a/tesla.html
+++ b/tesla.html
@@ -2,7 +2,7 @@
 <html lang="fr" dir="auto">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, target-densitydpi=dpi" />
 	<link rel="stylesheet" type="text/css" href="css/tesla.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
 	<script src="https://kit.fontawesome.com/b368ec75de.js" crossorigin="anonymous"></script>
