--- a/teslaApp.html
+++ b/teslaApp.html
@@ -13,9 +13,25 @@
 <body>
       <!-- Header : Titre et connexion -->
 
-      <header class="First">
-          <h1 class="title">Simone</h1>
-          <a class="prof" href="#"><i class='bx bxs-user-circle bx-md bx-burst-hover'></i></a>
+      <header class="container">
+          <nav class="navbar navbar-expand-lg ftco_navbar ftco-navbar-light" id="ftco-navbar">
+              <div class="container">
+                  <a class="navbar-brand" href="#">Simone</a>
+                  <div class="social-media order-lg-last">
+                      <p class="mb-0 d-flex">
+                          <a href="#" class="d-flex align-items-center justify-content-center">
+                              <i class="fa-solid fa-user"></i>
+                          </a>
+                          <a href="#" class="d-flex align-items-center justify-content-center">
+                              <i class="fa-solid fa-gears"></i>
+                          </a>
+                          <a href="#" class="d-flex align-items-center justify-content-center">
+                              <i class="fa-brands fa-instagram"></i>
+                          </a>
+                      </p>
+                  </div>
+              </div>
+          </nav>
       </header>
 
       <!-- Section : Batterie et les informations -->
