--- a/teslaApp.html
+++ b/teslaApp.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, target-densitydpi=dpi, initial-scale=1" />
-    <!--<link rel="stylesheet" type="text/css" href="css/-->
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
     <script src="https://kit.fontawesome.com/b368ec75de.js" crossorigin="anonymous"></script>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Tesla App</title>
@@ -23,13 +24,27 @@
                               <i class="fa-solid fa-user"></i>
                           </a>
                           <a href="#" class="d-flex align-items-center justify-content-center">
-                              <i class="fa-solid fa-gears"></i>
+                              <span class="fa fa-instagram"><i class="sr-only">Instagram</i></span>
                           </a>
                           <a href="#" class="d-flex align-items-center justify-content-center">
-                              <i class="fa-brands fa-instagram"></i>
+                              <span class="fa fa-twitter"><i class="sr-only">Twitter</i> </span>
                           </a>
                       </p>
                   </div>
+
+
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="fa fa-bars"></span> Menu
+              </button>
+
+              <div class="collapse navbar-collapse" id="ftco-nav">
+                  <ul class="navbar-nav ml-auto mr-md-3">
+                      <li class="nav-item active"><a href="#" class="nav-link">Home</a></li>
+                      <li class="nav-item"><a href="#" class="nav-link">Contrôles</a></li>
+                      <li class="nav-item"><a href="#" class="nav-link">Ventilation</a></li>
+                      <li class="nav-item"><a href="#" class="nav-link">Position</a></li>
+                  </ul>
+              </div>
               </div>
           </nav>
       </header>
@@ -41,37 +56,40 @@
                   25%
               </div>
           </div>
-        </section>
-          <!--<h2 class="percent">71%</h2>-->
 
-      <img class="img-fluid rounded mx-auto d-block" src="img/unknown.png" alt="voiture">
 
-      <ul class="nav justify-content-center">
+      <section class="container">
+          <img class="img-fluid rounded mx-auto d-block" src="img/unknown.png" alt="voiture">
+      </section>
 
-          <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">
-                  <i class='bx bxs-circle bx-flashing-hover bx-md' ></i>
-              </a>
-          </li>
+      <section class="container">
+          <ul class="nav justify-content-center">
 
-          <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">
-                  <i class='bx bx-leaf bx-flashing-hover bx-md'></i>
-              </a>
-          </li>
+              <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">
+                      <i class='bx bxs-circle bx-flashing-hover bx-md' ></i>
+                  </a>
+              </li>
 
-          <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">
-                  <i class='bx bxs-zap bx-flashing-hover bx-md'></i>
-              </a>
-          </li>
+              <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">
+                      <i class='bx bx-leaf bx-flashing-hover bx-md'></i>
+                  </a>
+              </li>
 
-          <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">
-                  <i class='bx bxs-car-crash bx-flashing-hover bx-md' ></i>
-              </a>
-          </li>
-      </ul>
+              <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">
+                      <i class='bx bxs-zap bx-flashing-hover bx-md'></i>
+                  </a>
+              </li>
+
+              <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">
+                      <i class='bx bxs-car-crash bx-flashing-hover bx-md' ></i>
+                  </a>
+              </li>
+          </ul>
+      </section>
 
       <section class="accordion accordion-flush" id="accordionFlushExample">
 
@@ -146,5 +164,10 @@
         </ul>
         <p class="text-center text-muted">@ 2022-2023 Manaud</p>
     </footer>
+
+    <script src="js/jquery.min.js"></script>
+    <script src="js/popper.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
