--- a/teslaApp.html
+++ b/teslaApp.html
@@ -6,14 +6,12 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
     <script src="https://kit.fontawesome.com/b368ec75de.js" crossorigin="anonymous"></script>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Tesla App</title>
 </head>
 <body>
       <!-- Header : Titre et connexion -->
-
       <header class="container">
           <nav class="navbar navbar-expand-lg ftco_navbar ftco-navbar-light" id="ftco-navbar">
               <div class="container">
@@ -32,7 +30,6 @@
                       </p>
                   </div>
 
-
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="fa fa-bars"></span> Menu
               </button>
@@ -50,12 +47,13 @@
       </header>
 
       <!-- Section : Batterie et les informations -->
-        <section class="container">
+      <section class="container">
           <div class="progress" style="height: 25px;">
               <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuemin="0" aria-valuemax="100">
                   25%
               </div>
           </div>
+      </section>
 
 
       <section class="container">
