--- a/Account_Page.html
+++ b/Account_Page.html
@@ -18,7 +18,7 @@
 <header class="container">
   <nav class="navbar navbar-expand-lg ftco_navbar ftco-navbar-light" id="ftco-navbar">
     <div class="container">
-      <a class="navbar-brand" href="teslaApp.html">Simone</a>
+      <a class="navbar-brand" href="index.html">Simone</a>
       <div class="social-media order-lg-last">
         <p class="mb-0 d-flex">
           <a href="#" class="d-flex align-items-center justify-content-center">
@@ -39,7 +39,7 @@
 
       <div class="collapse navbar-collapse" id="ftco-nav2">
         <ul class="navbar-nav ml-auto mr-md-3">
-          <li class="nav-item active"><a href="teslaApp.html" class="nav-link">Home</a></li>
+          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Contrôles</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Ventilation</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Position</a></li>
